@@ -19,6 +19,8 @@
 
 	<LI>Updated local JPEG library to version 7.</LI>
 
+	<LI>Updated default PDF version to 1.4.</LI>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>SECURITY: Fixed three buffer overflow issues when reading AFM files
